# src/app.ts
@@ -1,6 +1,7 @@
 import Server from "./classes/Server";
 import ArticlesRoute from "./routes/Articles.route";
 import IndexRoute from "./routes/Index.route";
+import UsersRoute from "./routes/Users.route";
 const app = new Server(process.env.PORT || 8080);
 
 const articles = new ArticlesRoute();
@@ -8,5 +9,8 @@ app.addRoute("/articles", articles.router);
 
 const index = new IndexRoute(app.getRoutes());
 app.addRoute("/", index.router);
+
+const users = new UsersRoute();
+app.addRoute("/users", users.router);
 
 app.start();
